Add server shell

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "serve": "node ./server/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +28,7 @@
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
+    "express": "^4.10.2",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
@@ -34,6 +36,7 @@
     "react-router": "^2.0.1",
     "redux": "^3.6.0",
     "redux-promise": "^0.5.3",
+    "socket.io": "^1.7.2",
     "youtube-api-search": "0.0.5"
   }
 }
