--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
     "test:watch": "npm run test -- --watch",
-    "serve": "node ./server/index.js"
+    "serve": "concurrently \"webpack-dev-server\" \"nodemon ./server\""
   },
   "author": "",
   "license": "ISC",
@@ -19,16 +19,20 @@
     "babel-preset-react": "^6.1.18",
     "chai": "^3.5.0",
     "chai-jquery": "^2.0.0",
+    "concurrently": "^3.3.0",
     "jquery": "^2.2.1",
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
+    "nodemon": "^1.11.0",
     "react-addons-test-utils": "^0.14.7",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0"
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
     "express": "^4.10.2",
+    "fb": "^1.1.1",
+    "fbgraph": "^1.4.1",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
@@ -36,6 +40,7 @@
     "react-router": "^2.0.1",
     "redux": "^3.6.0",
     "redux-promise": "^0.5.3",
+    "request": "^2.79.0",
     "socket.io": "^1.7.2",
     "youtube-api-search": "0.0.5"
   }
