--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "redux-simple-starter",
-  "version": "1.0.0",
-  "description": "Simple starter package for Redux with React and Babel support",
+  "name": "@crispybacon12/facebook-chat",
+  "version": "0.0.9",
+  "description": "A low-bandwidth UI to steam Facebook live video comments over websocket",
   "main": "index.js",
-  "repository": "git@github.com:StephenGrider/ReduxSimpleStarter.git",
+  "repository": "git@github.com:CrispyBacon12/facebook-chat.git",
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
