--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
     "nodemon": "^1.11.0",
-    "react-addons-test-utils": "^0.14.7",
+    "react-addons-test-utils": "^15.0.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
   },
@@ -33,10 +33,11 @@
     "fb": "^1.1.1",
     "fbgraph": "^1.4.1",
     "lodash": "^3.10.1",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
+    "react": "^15.0.0",
+    "react-dom": "^15.0.0",
     "react-redux": "^4.4.6",
     "react-router": "^2.8.1",
+    "react-timeago": "^3.1.3",
     "redux": "^3.6.0",
     "redux-promise": "^0.5.3",
     "request": "^2.79.0",
